[package]
name = "servt"
version = "0.2.0"
edition = "2021"
categories = ["network-programming", "asynchronous", "web-programming::http-server"]
license = "MIT"
repository = "https://github.com/werdl/servt"
readme = "README.md"
keywords = ["http", "server", "async", "small", "lightweight"]
documentation = "https://docs.rs/servt"
homepage = "https://github.com/werdl/servt"
description = "A small, lightweight, and fast optionally asynchronous HTTP server library for Rust."


[dependencies]
smol = {"version" = "2.0.0", optional = true }
httparse = "1.8.0"
chrono = { version = "0.4.34", default-features = false, optional = true, features = ["alloc", "now"]}

[features]
default = ["async", "time"]
async = ["dep:smol"]
time = ["dep:chrono"]
